--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "droxion-ui-final",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
